Debug /putData POST request

--- a/Glitch Files 07-11-2021/public/highscores.html
+++ b/Glitch Files 07-11-2021/public/highscores.html
@@ -32,8 +32,8 @@
           Display Scores
         </button>
 
-        <button id="display-scores-btn" onclick="getDataFromServer(testUpdate)">
-          Display Scores
+        <button id="display-scores-btn" onclick="getDataFromServer(updateClientDataTable)">
+          Update Client Table
         </button>
 
         <div id="rowlist"></div>
