--- a/Glitch/Glitch Files 09-11-2021/public/highscores.html
+++ b/Glitch/Glitch Files 09-11-2021/public/highscores.html
@@ -15,21 +15,21 @@
           Display Scores
         </button>
 
-        <div id="rowlist">
-			<ol>
+        <div>
+			<ol id=rowList>
 				<li>Isobel : 1</li>
 				<li>Finn : 0</li>
 			</ol>
 		</div>
 
     </body>
-	
+
 <style>
 	body {
 		background-color: #3c3535;
-		background-image: url("https://stratfordcollegedublin-my.sharepoint.com/personal/imurphy2016_student_stratfordcollege_ie/Documents/Alt%201/snake-bg-opac.png");		
+		background-image: url("https://stratfordcollegedublin-my.sharepoint.com/personal/imurphy2016_student_stratfordcollege_ie/Documents/Alt%201/snake-bg-opac.png");
 	}
-	
+
 	button {
 	  background-color: #991515; /* Red */ /* #ed3d3d */
 	  border: none;
@@ -40,11 +40,11 @@
 	  display: inline-block;
 	  font-size: 44px;
 	  font-family: Arial Black;
-	  
+
 	  transition-duration: 0.4s;
 	  cursor: pointer;
 	  border-radius: 10px;
-	  
+
 	  /* Centering */
 	  margin-top: 50px;
 	  position: absolute;
@@ -62,9 +62,9 @@
 		font-family: Arial Black;
 		text-align: center;
 		color: white;
-		
+
 		text-shadow: 5px 5px #991515;
-	
+
 	}
 
 	#highscores-title {
@@ -73,10 +73,10 @@
 		font-family: Arial Black;
 		text-align: center;
 		color: white;
-		
+
 		text-shadow: 5px 5px #991515;
 	}
 
 </style>
-	
+
 </html>
