--- a/Glitch/Glitch Files 09-11-2021/public/highscores.html
+++ b/Glitch/Glitch Files 09-11-2021/public/highscores.html
@@ -12,13 +12,13 @@
         </header>
 
         <button id="display-scores-btn" onclick="getDataFromServer(displayData)">
-          Display Scores
+          Load Scores
         </button>
 
         <div id=rowList>
-			<ol>
-				<li>Isobel : 1</li>
-				<li>Finn : 0</li>
+			<ol id="rowlist-ol">
+				<!-- <li>Isobel : 1</li>
+				<li>Finn : 0</li> -->
 			</ol>
 		</div>
 
@@ -48,7 +48,7 @@
         /* Centering */
         margin-top: 50px;
         position: absolute;
-        left: 37%;
+        left: 38%;
 	}
 
 	button:hover {
@@ -56,16 +56,19 @@
 	}
 
     #rowList {
-        margin-top: 17%;
+        background: #991515;
         border: 10px solid #991515;
+        border-radius: 15px;
+
+        margin-top: 17%;
         margin-left: 30%;
         margin-right: 30%;
-        border-radius: 15px;
+        transition-duration: 0.4s;
     }
 
     #rowList:hover {
-        background: #991515;
-        transition-duration: 0.4s;
+        border: 100px solid #ed3d3d;
+        background: #ed3d3d;
     }
 
 	ol li {
@@ -81,7 +84,7 @@
 	}
 
 	#highscores-title {
-		left: 25%;
+		left: 22%;
 		font-size: 64px;
 		font-family: Arial Black;
 		text-align: center;
