--- a/Glitch/Glitch Files 09-11-2021/public/game.html
+++ b/Glitch/Glitch Files 09-11-2021/public/game.html
@@ -7,7 +7,7 @@
         <script src="postClient.js" charset="utf-8" defer></script>
         <script src="p5.js" charset="utf-8" defer></script>
 
-        <link rel="stylesheet" href="style.css">
+        <!-- <link rel="stylesheet" href="style.css"> -->
         <title></title>
     </head>
     <body>
@@ -15,5 +15,21 @@
             <div id="gameCanvas"></div>
         </div>
     </body>
+
+    <style>
+        #game {
+            display: flex;
+            width: 50%;
+            height: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        #gameCanvas {
+            box-sizing: border-box;
+            margin: auto;
+        }
+
+    </style>
 
 </html>
